login and register routes now open modal in home
